--- a/other.htm
+++ b/other.htm
@@ -287,16 +287,6 @@ Conferences</a></h3>
  name="Forthcoming">Forthcoming</a>
 :</p>
 <span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - Journ&eacute;e Fili&egrave;re
-Bioth&eacute;rapie Innovation Occitanie, Montpellier</span><span
- style="font-family: Calibri;">, </span><span
- style="font-family: Calibri;">October 13, 2022</span><br>
-<span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - IFS UCL LSE IO seminar, October 21,
-2022<br>
-</span><span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Stockholm School of
 Economics, November 16, 2022<br>
 </span><span style="font-family: Calibri;"></span><span
@@ -319,18 +309,44 @@ du Canc&eacute;ropole Grand Sud-Ouest </span><span
 2023<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;- Strategy Seminar, Kellogg, Nothwestern
-University, March 29,
+&nbsp;&nbsp;&nbsp; &nbsp;- Nothwestern
+University, </span><span style="font-family: Calibri;">Strategy
+Seminar, Kellogg, </span><span style="font-family: Calibri;">March 29,
 2023</span><span style="font-family: Calibri;"><br>
-&nbsp;</span><span style="font-family: Calibri;">Past :</span><!--[endif]-->
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;-&nbsp;University of Wisconsin, Madison, April
+5,
+2023<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - IESE Business School,
+Barcelona, June 12-13, 2022 <br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;</span><span
+ style="font-family: Calibri;">Past :</span><!--[endif]-->
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- IFS UCL LSE IO
+seminar, October 21,
+2022<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
  style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;;"><span style="">1.</span></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; - Journ&eacute;e
+Fili&egrave;re
+Bioth&eacute;rapie Innovation Occitanie, Montpellier</span><span
+ style="font-family: Calibri;">, </span><span
+ style="font-family: Calibri;">October 13, 2022</span><br>
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp; </span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;"> &nbsp;&nbsp;
-&nbsp;&nbsp; &nbsp; - 17th Annual Conference
+&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; - 17th Annual
+Conference
 of GSF-GETO, Toulouse, June 30, 2022<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
@@ -1558,7 +1574,8 @@ Francisco, US</li>
 Abi-Rafeh</a>, Essays in empirical industrial organization of
 advertising and platform markets, defended on September 9, 2022, now at
 Deliveroo London</li>
-  <li>Malgorzata Majewska, IO and
+  <li><a href="https://gosia-majewska.github.io/" target="_blank">Gosia
+Majewska</a>, IO and
 Health</li>
   <li>Gokce Gokkoca, IO and Health</li>
   <li>L&eacute;a Bignon, IO and Health</li>
