--- a/other.htm
+++ b/other.htm
@@ -1531,8 +1531,8 @@ Magnac)&nbsp;defended
 on October 22,
 2009. First
 placement: post
-doc, European University Institute, Florence now at Universitat
-Autonoma de Barcelona</li>
+doc, European University Institute, Florence now at Queen Mary
+University of London, School of Economics and Finance&nbsp;</li>
   <li><a href="mailto:daisyqiuj@hotmail.com" target="_blank">Qiu
 Ju</a>,&nbsp;Essays on Household
 Consumption Behavior and Risk Sharing in Developing Countries,
@@ -1561,7 +1561,7 @@ Tun&ccedil;el</a>, Essays in IO
 and Health Economics,&nbsp;(with J.
 Hammitt),&nbsp;defended on June 26, 2017, first placement:
 Assistant
-Professor, HEC Montr&eacute;al</li>
+Professor, HEC Montr&eacute;al, now at Florida State University</li>
   <li><a
  href="mailto:Adrian%20Torchiana%20%28adrian.torchiana@gmail.com%29">Adrian
 Torchiana</a>, Essays in Applied
@@ -1577,7 +1577,8 @@ Deliveroo London</li>
   <li><a href="https://gosia-majewska.github.io/" target="_blank">Gosia
 Majewska</a>, IO and
 Health</li>
-  <li>Gokce Gokkoca, IO and Health</li>
+  <li><a href="https://www.gokcegokkoca.com/">Gokce Gokkoca</a>, IO and
+Health</li>
   <li>L&eacute;a Bignon, IO and Health</li>
   <li>Xin Zhang, IO</li>
   <li>Valentina Reig, IO and Health</li>
