--- a/other.htm
+++ b/other.htm
@@ -1498,7 +1498,9 @@ Seminar INRA-IDEI at IDEI, University of Toulouse, December 1997</p>
 Students (as main advisor):
 </span>
 <ul style="font-family: Calibri;">
-  <li><a href="http://www.ifs.org.uk/people/profile/304" target="_blank">Marta
+  <li><a
+ href="https://scholar.google.com/citations?user=cT5bOMYAAAAJ&amp;hl=en"
+ target="_blank">Marta
 Rubio-Codina</a> : <i style="">Conditional Cash
 Transfers
 and Human and Physical Capital Accumulation in Rural Mexico -An
@@ -1510,7 +1512,8 @@ doc Leverhulme
 Trust at
 University College
 London, IFS Senior Researcher<o:p></o:p></li>
-  <li><a target="_blank" href="mailto:sandra.jodar@univ-tlse1.fr">Sandra
+  <li><a target="_blank"
+ href="https://www.caixabankresearch.com/en/author/sandra-jodar-rosell">Sandra
 Jodar</a>: <i style="">Econometrics
 of differentiated products and localization</i>,
 defended
@@ -1523,8 +1526,7 @@ Consumer Behavior in Industrial Organization</i>,&nbsp;defended
 on June 5, 2009.
 First placement: Assistant Professor,
 Department of Economics, University Pompeu Fabra, Barcelona.<o:p></o:p></li>
-  <li><a href="https://sites.google.com/a/slaczo.com/www/"
- target="_blank">Sarolta
+  <li><a href="https://saroltalaczo.wixsite.com/home" target="_blank">Sarolta
 Laczo</a>: <i style="">Essays on Informal Risk
 Sharing</i>, (with T.
 Magnac)&nbsp;defended
@@ -1545,7 +1547,7 @@ Pharmaceuticals,&nbsp;defended
 on December 7 2015, first
 placement: Assistant Professor McGill University, Montr&eacute;al.</li>
   <li><a target="_blank"
- href="http://www.urosario.edu.co/Profesores/Listado-de-profesores/F/Jorge-Florez-Acosta/">Jorge
+ href="https://sites.google.com/view/jorge-florez-acosta/home">Jorge
 Florez</a>, Empirical
 IO of the Food Retailing Industry, (with
 B. Jullien),&nbsp;defended on July 21 2015, first
