--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -29,7 +29,11 @@ papers:</i></p>
  style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; </span><span style="font-family: Calibri;"><span
  lang="EN-US"><br>
-&nbsp; &nbsp;&nbsp; "Soda Taxes and Advertising Dynamics" with Rossi
+&nbsp; &nbsp;&nbsp; "The Economics of Transferable Patent Extensions"
+with Paul-Henri Moisson and Jean Tirole<br>
+<br>
+&nbsp;&nbsp;&nbsp; &nbsp; "Soda Taxes and Advertising Dynamics" with
+Rossi
 Abi-Rafeh, Rachel Griffith, Martin O'Connell<br>
 <br>
 </span></span>
