--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -29,10 +29,13 @@ papers:</i></p>
  style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; </span><span style="font-family: Calibri;"><span
  lang="EN-US"><br>
-&nbsp; &nbsp;&nbsp; "The Economics of Transferable Patent Extensions"
+&nbsp; &nbsp;&nbsp; "<a href="DMT%20TEE%20TSE%20WP%202022.pdf"
+ target="_blank">The
+Economics of Transferable Patent Extensions</a>"
 with Paul-Henri Moisson and Jean Tirole<br>
 <br>
-&nbsp;&nbsp;&nbsp; &nbsp; "Soda Taxes and Advertising Dynamics" with
+&nbsp;&nbsp;&nbsp; &nbsp; "Soda Taxes and Advertising
+Dynamics" with
 Rossi
 Abi-Rafeh, Rachel Griffith, Martin O'Connell<br>
 <br>
@@ -46,30 +49,32 @@ Abi-Rafeh, Rachel Griffith, Martin O'Connell<br>
 and Advertising in the
 Pharmaceutical Industry", with Gosia Majewska<o:p></o:p></span></p>
 <span style="font-family: Calibri;"><span lang="EN-US"><br>
-</span></span><span style="font-family: Calibri;">&nbsp; &nbsp; &nbsp;</span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">"Strategic Submissions: A Cross-Country
+</span></span><span style="font-family: Calibri;">&nbsp; &nbsp;
+&nbsp;</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">"Strategic Submissions:
+A Cross-Country
 Analysis of Supplemental
 Drug Approvals" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el<br>
 <br>
-&nbsp;&nbsp; &nbsp; "Antibiotic Demand in the Presence of Antimicrobial
+&nbsp;&nbsp; &nbsp; "Antibiotic Demand in the Presence of
+Antimicrobial
 Resistance", with G&ouml;k&ccedil;e G&ouml;kkoca<br>
 <br>
-&nbsp;&nbsp;&nbsp; &nbsp;"Optimal Intertemporal Setting of Drug
+&nbsp;&nbsp;&nbsp; &nbsp;"Optimal Intertemporal Setting
+of Drug
 Expenses: Hepatitis C as a case study" with Thierry Magnac<br>
 <br>
 </span><span style="font-family: Calibri;"><span lang="EN-US">
-&nbsp;&nbsp;&nbsp; "<a
- style="color: rgb(0, 0, 0); text-decoration: none;" href="DGV.pdf"
- target="_blank">Bargaining and
+&nbsp;&nbsp;&nbsp; "<a href="DGV.pdf" target="_blank">Bargaining and
 International
-Reference Pricing in the Pharmaceutical Industry</a>" with Ashvin
+Reference Pricing in the Pharmaceutical Industry</a>"
+with Ashvin
 Gandhi
 and Shoshana Vasserman<br>
 <br>
 </span></span><span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
- style="color: rgb(0, 0, 0); text-decoration: none;" href="dp.pdf"
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+"<a style="color: rgb(0, 0, 0); text-decoration: none;" href="dp.pdf"
  target="_blank">Price
 Dispersion and Information Frictions: Evidence from Supermarket
 Purchases</a>", with Helena Perrone,
@@ -144,20 +149,22 @@ Statistics</i><br style="font-family: Calibri;">
 of Preferences, Limited Commitment and Coalitions: Empirical Evidence
 on the Limits to Risk Sharing in Rural Pakistan</a><span
  style="font-family: Calibri;">" CEPR DP 6004<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; <br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+<br>
 </span><br>
 <span style="font-family: Calibri;"><span lang="EN-US"><span
  style="font-weight: bold;">Permanent Working Papers:<br>
 <br style="font-weight: bold;">
 </span></span></span><span style="font-family: Calibri;"><span
- class="style1style2style9" lang="EN-GB">&nbsp;&nbsp;&nbsp; &ldquo;</span><span
- lang="EN-US"><a style="color: rgb(0, 0, 0); text-decoration: none;"
+ class="style1style2style9" lang="EN-GB">&nbsp;&nbsp;&nbsp;
+&ldquo;</span><span lang="EN-US"><a
+ style="color: rgb(0, 0, 0); text-decoration: none;"
  href="Academic-Journals_031106.pdf" target="_blank">Academic
 Journals as Two-Sided Platforms:
 Empirical Evidence from Data on French Libraries</a>&rdquo;,
 with
-Adriana Hernandez-Perez and Marc Ivaldi</span>, CEPR DP 5990<span
- lang="EN-US"><br>
+Adriana Hernandez-Perez and Marc Ivaldi</span>,
+CEPR DP 5990<span lang="EN-US"><br>
 </span></span><br>
 <span style="font-family: Calibri;"></span>
 <ul style="font-family: Calibri;">
@@ -167,7 +174,8 @@ Working Papers</span></span><span
  style="color: rgb(33, 33, 33); font-family: Bitter; font-size: 14.6667px; font-style: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; widows: 2; word-spacing: 0px; display: inline ! important; float: none;">:<br>
 <br>
 </span><span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "Intrahousehold
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+"Intrahousehold
 Risk Sharing, Incentives and Nutrition:
 Evidence from the Philippines", with Ethan Ligon <br>
 <br>
