--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -74,8 +74,7 @@ and Shoshana Vasserman<br>
 <br>
 </span></span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-"<a style="color: rgb(0, 0, 0); text-decoration: none;" href="dp.pdf"
- target="_blank">Price
+"<a href="dp.pdf" target="_blank">Price
 Dispersion and Information Frictions: Evidence from Supermarket
 Purchases</a>", with Helena Perrone,
 revise and resubmit
@@ -83,10 +82,8 @@ at </span><span style="font-style: italic; font-family: Calibri;">American
 Economic Journal, Microeconomics</span><span
  style="font-family: Calibri;"> <br>
 &nbsp;&nbsp;&nbsp; <br>
-&nbsp;&nbsp;&nbsp; "</span><a
- style="color: rgb(0, 0, 0); text-decoration: none; font-family: Calibri;"
- href="DuboisKyle_Cancer.pdf" target="_blank"><span style=""
- lang="EN-US">Are
+&nbsp;&nbsp;&nbsp; "</span><a href="DuboisKyle_Cancer.pdf"
+ target="_blank"><span style="" lang="EN-US">Are
 Cancer Drugs Worth the Price? The
 Effects of
 Pharmaceutical
@@ -95,9 +92,7 @@ Innovation on Cancer Mortality Rates</span></a><span
 with Margaret
 Kyle <br>
 <br>
-&nbsp;&nbsp;&nbsp; "<a
- style="color: rgb(0, 0, 0); text-decoration: none;"
- href="dubois_jodar.pdf" target="_blank">Price
+&nbsp;&nbsp;&nbsp; "<a href="dubois_jodar.pdf" target="_blank">Price
 and Brand Competition between Differentiated Retailers: A Structural
 Econometric Model</a>", with Sandra
 Jodar,
@@ -106,25 +101,20 @@ revise and resubmit at </span><span
 Economics</span><span style="font-family: Calibri;"><span lang="EN-US"></span>,
 CEPR DP 7847<br>
 <br>
-&nbsp;&nbsp;&nbsp; "<a
- style="color: rgb(0, 0, 0); text-decoration: none;"
- href="BDmay2015.pdf" target="_blank">Identifying
+&nbsp;&nbsp;&nbsp; "<a href="BDmay2015.pdf" target="_blank">Identifying
 Two Part Tariff Contracts with Buyer Power: Empirical Estimation on
 Food Retailing</a>", with
 C&eacute;line Bonnet <br>
 <br>
-&nbsp;&nbsp;&nbsp; "</span><a
- style="color: rgb(0, 0, 0); text-decoration: none; font-family: Calibri;"
- href="nutrition_risk_sharing.pdf" target="_blank">Nutrition
+&nbsp;&nbsp;&nbsp; "</span><a href="nutrition_risk_sharing.pdf"
+ target="_blank">Nutrition
 and Risk Sharing within the
 Household</a><span style="font-family: Calibri;">", with Ethan
 Ligon, CEPR 7574<br>
 <br>
-&nbsp;&nbsp;&nbsp; &nbsp;"</span><a
- style="text-decoration: none; font-family: Calibri;"
- href="hetpakdef.pdf" target="_blank"><span style="color: rgb(0, 0, 0);">Consumption
+&nbsp;&nbsp;&nbsp; &nbsp;"</span><a href="hetpakdef.pdf" target="_blank">Consumption
 Insurance With Heterogeneous Preferences. Can Sharecropping Help
-Complete Markets</span>?</a><span style="font-family: Calibri;">",&nbsp;
+Complete Markets?</a><span style="font-family: Calibri;">",&nbsp;
 revise and
 resubmit at the </span><i style="font-family: Calibri;">Journal of
 Political Economy</i><span style="font-family: Calibri;"> </span><br
@@ -133,9 +123,8 @@ Political Economy</i><span style="font-family: Calibri;"> </span><br
 <span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; </span><span
  style="font-style: italic; font-family: Calibri;"></span><span
- style="font-family: Calibri;">"</span><a
- style="color: rgb(0, 0, 0); text-decoration: none; font-family: Calibri;"
- href="multi.pdf" target="_blank">Multitask
+ style="font-family: Calibri;">"</span><a href="multi.pdf"
+ target="_blank">Multitask
 Moral Hazard, Incentive Contracts and Land Value</a><span
  style="font-family: Calibri;">",
 revise and resubmit at the </span><i style="font-family: Calibri;">Annals
@@ -143,9 +132,7 @@ of&nbsp;Economics and
 Statistics</i><br style="font-family: Calibri;">
 <span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; <br>
-&nbsp;&nbsp;&nbsp; "</span><a
- style="color: rgb(0, 0, 0); text-decoration: none; font-family: Calibri;"
- href="CEPR-DP6004" target="_blank">Heterogeneity
+&nbsp;&nbsp;&nbsp; "</span><a href="CEPR-DP6004" target="_blank">Heterogeneity
 of Preferences, Limited Commitment and Coalitions: Empirical Evidence
 on the Limits to Risk Sharing in Rural Pakistan</a><span
  style="font-family: Calibri;">" CEPR DP 6004<br>
@@ -157,9 +144,8 @@ on the Limits to Risk Sharing in Rural Pakistan</a><span
 <br style="font-weight: bold;">
 </span></span></span><span style="font-family: Calibri;"><span
  class="style1style2style9" lang="EN-GB">&nbsp;&nbsp;&nbsp;
-&ldquo;</span><span lang="EN-US"><a
- style="color: rgb(0, 0, 0); text-decoration: none;"
- href="Academic-Journals_031106.pdf" target="_blank">Academic
+&ldquo;</span><span lang="EN-US"><a href="Academic-Journals_031106.pdf"
+ target="_blank">Academic
 Journals as Two-Sided Platforms:
 Empirical Evidence from Data on French Libraries</a>&rdquo;,
 with
