--- a/contact.htm
+++ b/contact.htm
@@ -48,6 +48,11 @@ Health Center</a> (2021-)
  href="https://www.iufrance.fr/" target="_blank">Institut
 Universitaire de France</a> (2022-2027)</font></div>
 <div>&nbsp;<a
+ href="https://cepr.org/research/programme-areas/industrial-organization"
+ target="_blank">CEPR</a> Industrial Organization Program Director
+(2022-)<br>
+<br>
+&nbsp;<a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
  href="https://ifs.org.uk/people/pierre-dubois" target="_blank">IFS
 Research Fellow</a>
