--- a/other.htm
+++ b/other.htm
@@ -286,10 +286,8 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Forum Sant&eacute; Innovation, Lyon,
-November 8, 2022<br>
-</span><span style="font-family: Calibri;"></span><span
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Stockholm School of
 Economics, November 16, 2022<br>
@@ -332,7 +330,18 @@ Barcelona, June 12-13, 2022 <br>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- IFS UCL LSE IO
+&nbsp;</span><span style="font-family: Calibri;">&nbsp;</span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - AMR course, fondation M&eacute;rieux,
+Annecy,
+November 11, 2022<br>
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span
+ style="font-family: Calibri;"> &nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Forum Sant&eacute; Innovation, Lyon,
+November 8, 2022<br>
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span
+ style="font-family: Calibri;"> &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;-
+IFS UCL LSE IO
 seminar, October 21,
 2022<br>
 </span><span style="font-family: Calibri;"></span><span
