--- a/other.htm
+++ b/other.htm
@@ -288,10 +288,6 @@ Conferences</a></h3>
 :</p>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Stockholm School of
-Economics, November 16, 2022<br>
-</span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - Hong Kong University of Science and
@@ -321,7 +317,7 @@ Seminar, Kellogg, </span><span style="font-family: Calibri;">March 29,
 5,
 2023<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - IESE Business School,
-Barcelona, June 12-13, 2022 <br>
+Barcelona, June 12-13, 2023 <br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">Past :</span><!--[endif]-->
@@ -329,10 +325,18 @@ Barcelona, June 12-13, 2022 <br>
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; - Stockholm School of
+Economics, November 16, 2022<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">
 &nbsp;</span><span style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - AMR course, fondation M&eacute;rieux,
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; - AMR
+course, fondation M&eacute;rieux,
 Annecy,
 November 11, 2022<br>
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span><span
