--- a/other.htm
+++ b/other.htm
@@ -289,10 +289,8 @@ Conferences</a></h3>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - Hong Kong University of Science and
-Technology, November 25, 2022<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - American Economic Association, New Orleans,
 January 6-8, 2023<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
@@ -327,7 +325,12 @@ Barcelona, June 12-13, 2023 <br>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; - Stockholm School of
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; - Hong Kong University of Science and
+Technology, November 25, 2022<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; -
+Stockholm School of
 Economics, November 16, 2022<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
