--- a/other.htm
+++ b/other.htm
@@ -293,6 +293,10 @@ Conferences</a></h3>
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - American Economic Association, New Orleans,
 January 6-8, 2023<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - Global AMR R&amp;D Hub's Pull Incentives
+Working Group,
+January 23, 2023<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;- Seminar Lille Economie Management, March 14,
 2023<br>
