--- a/other.htm
+++ b/other.htm
@@ -290,10 +290,8 @@ Conferences</a></h3>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - American Economic Association, New Orleans,
-January 6-8, 2023<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - Global AMR R&amp;D Hub's Pull Incentives
 Working Group,
 January 23, 2023<br>
@@ -320,6 +318,12 @@ Seminar, Kellogg, </span><span style="font-family: Calibri;">March 29,
 2023<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - IESE Business School,
 Barcelona, June 12-13, 2023 <br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - MaCCI-EPoS WORKSHOP
+&ldquo;Frontiers in Empirical Industrial Organization&rdquo;, </span><span
+ style="font-family: Calibri;">August 31, 2023 </span><br>
+<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Journ&eacute;es de l'Economie, Lyon,
+November 2023<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">Past :</span><!--[endif]-->
@@ -329,7 +333,13 @@ Barcelona, June 12-13, 2023 <br>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; - Hong Kong University of Science and
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; - American Economic Association, New
+Orleans,
+January 6-8, 2023<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; - Hong
+Kong University of Science and
 Technology, November 25, 2022<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
