--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -120,6 +120,8 @@ Expenses: Hepatitis C as a case study" with Thierry Magnac</span></p>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
  style="font-family: Calibri;"></span></p>
 <p
+ style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;">&nbsp;</p>
+<p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"></p>
 <span style="font-family: Calibri;"><span lang="EN-US"><span
  style="font-weight: bold;">Old Working Papers (with R&amp;R, not
