--- a/other.htm
+++ b/other.htm
@@ -1599,15 +1599,14 @@ and Health Economics,&nbsp;(with J.
 Hammitt),&nbsp;defended on June 26, 2017, first placement:
 Assistant
 Professor, HEC Montr&eacute;al, now at Florida State University</li>
-  <li><a
- href="mailto:Adrian%20Torchiana%20%28adrian.torchiana@gmail.com%29">Adrian
+  <li><a href="https://www.linkedin.com/in/adrian-torchiana-0701548a/">Adrian
 Torchiana</a>, Essays in Applied
 Econometrics with Missing
 Data,&nbsp;defended on October 9, 2017, now Data Scientist,
 Granular,
 San
 Francisco, US</li>
-  <li><a href="https://www.rossiabirafeh.com/" target="_blank">Rossi
+  <li><a href="https://www.linkedin.com/in/habibi/" target="_blank">Rossi
 Abi-Rafeh</a>, Essays in empirical industrial organization of
 advertising and platform markets, defended on September 9, 2022, now at
 Deliveroo London</li>
