--- a/other.htm
+++ b/other.htm
@@ -74,6 +74,13 @@ Conferences</a></h3>
 <ul style="font-family: Calibri;">
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
+with Jean Tirole of the 1st <a
+ href="https://www.tse-fr.eu/conferences/2023-1st-cepr-conference-health-economics"
+ target="_blank">CEPR Health Economics Conference</a>, Toulouse School
+of Economics, June 19-20, 2023</p>
+  </li>
+  <li>
+    <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
 of TSE Workshop on "Innovation, regulation and
 organization in healthcare", Paris, June 27, 2022, <a
  href="2022-06-27_workshop_agenda.pdf" target="_blank">Program</a></p>
