--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -65,8 +65,13 @@ Innovation on Cancer Mortality Rates</span></a><span
 with Margaret
 Kyle <br>
 <br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
- href="BDmay2015.pdf" target="_blank">Identifying
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;"<a
+ href="DM-WPTSE-230120.pdf" target="_blank">Optimal Intertemporal
+Curative Drug
+Expenses: The Case of Hepatitis C in France</a>" with Thierry Magnac</span><span
+ style="font-family: Calibri;">&nbsp;&nbsp; <br>
+<br>
+&nbsp; &nbsp;&nbsp; "<a href="BDmay2015.pdf" target="_blank">Identifying
 Two Part Tariff Contracts with Buyer Power: Empirical Estimation on
 Food Retailing</a>", with
 C&eacute;line Bonnet <br>
@@ -76,8 +81,8 @@ C&eacute;line Bonnet <br>
 and Risk Sharing within the
 Household</a><span style="font-family: Calibri;">", with Ethan
 Ligon, CEPR 7574<br>
-</span><span style="font-family: Calibri;"></span><i
- style="font-family: Calibri;"></i><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 <br>
 &nbsp;&nbsp;&nbsp; "</span><a href="CEPR-DP6004" target="_blank">Heterogeneity
 of Preferences, Limited Commitment and Coalitions: Empirical Evidence
@@ -112,10 +117,7 @@ Drug Approvals" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el<br>
 &nbsp;&nbsp; &nbsp; "Antibiotic Demand in the Presence of
 Antimicrobial
 Resistance", with G&ouml;k&ccedil;e G&ouml;kkoca<br>
-<br>
-&nbsp;&nbsp;&nbsp; &nbsp;"Optimal Intertemporal Setting
-of Drug
-Expenses: Hepatitis C as a case study" with Thierry Magnac</span></p>
+</span></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
  style="font-family: Calibri;"></span></p>
