--- a/other.htm
+++ b/other.htm
@@ -298,11 +298,8 @@ Conferences</a></h3>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - Global AMR R&amp;D Hub's Pull Incentives
-Working Group,
-January 23, 2023<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;- Seminar Lille Economie Management, March 14,
 2023<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
@@ -340,7 +337,14 @@ November 2023<br>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; - American Economic Association, New
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; - Global AMR R&amp;D Hub's Pull
+Incentives
+Working Group,
+January 23, 2023<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;
+- American Economic Association, New
 Orleans,
 January 6-8, 2023<br>
 </span><span style="font-family: Calibri;"></span><span
