--- a/contact.htm
+++ b/contact.htm
@@ -26,15 +26,13 @@
 &nbsp;Professor
 of Economics,&nbsp;<a style="color: rgb(44, 19, 209);" target="_blank"
  href="http://tse-fr.eu/">Toulouse
-School of Economics</a><span style="color: rgb(0, 0, 0);">,&nbsp;</span><a
+School of Economics</a><span style="color: rgb(0, 0, 0);"></span><a
  style="text-decoration: none; color: rgb(0, 0, 0);" target="_blank"
- href="http://www.ut-capitole.fr/">University
-of Toulouse
-1 Capitole</a>
+ href="http://www.ut-capitole.fr/"></a>
 <div><br>
-<span style="font-family: Calibri;">&nbsp;Co-Editor, <a
- style="color: rgb(0, 0, 0); text-decoration: none;"
- href="https://academic.oup.com/jeea" target="_blank">Journal
+<span style="font-family: Calibri;">&nbsp;Co-Editor,
+<a style="color: rgb(44, 19, 209);" href="https://academic.oup.com/jeea"
+ target="_blank">Journal
 of the
 European Economic Association</a></span>
 (2021-)</div>
@@ -46,10 +44,12 @@ Health Center</a> (2021-)
 &nbsp;Senior Member of <a
  style="text-decoration: none; color: rgb(0, 0, 0);" color="rgb(0,0,0)"
  href="https://www.iufrance.fr/" target="_blank">Institut
-Universitaire de France</a> (2022-2027)</font></div>
+Universitaire de France</a>
+(2022-2027)</font></div>
 <div>&nbsp;<a
  href="https://cepr.org/research/programme-areas/industrial-organization"
- target="_blank">CEPR</a> Industrial Organization Program Director
+ target="_blank">CEPR</a>
+Industrial Organization Program Director
 (2022-)<br>
 <br>
 &nbsp;<a
@@ -106,13 +106,13 @@ Editor of&nbsp;</span><a
  target="_blank">International Journal of Industrial
 Organization</a><span style="font-family: Calibri;">
 (2013-2018)</span></div>
-<div><span style="font-family: Calibri;">&nbsp;Associate Editor of <a
- style="text-decoration: none; color: rgb(0, 0, 0);"
+<div><span style="font-family: Calibri;">&nbsp;Associate
+Editor of <a style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://www.journals.elsevier.com/european-economic-review"
  target="_blank">European Economic Review</a>
 (2012-)</span></div>
-<div><span style="font-family: Calibri;">&nbsp;Associate Editor of <a
- style="text-decoration: none; color: rgb(0, 0, 0);"
+<div><span style="font-family: Calibri;">&nbsp;Associate
+Editor of <a style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://annals.ensae.fr/" target="_blank">Annals
 of Economics
 and Statistics</a> (2009-)</span></div>
@@ -141,9 +141,7 @@ CV</a></font></div>
  style="text-decoration: none;"
  href="http://www.tse-fr.eu/people/pierre-dubois" target="_blank"><span
  style="color: rgb(0, 0, 0);">TSE web page</span></a></font></div>
-<div><font style="color: rgb(0, 0, 0); font-family: Calibri;"><a
- style="text-decoration: none;"
- href="http://www.tse-fr.eu/people/pierre-dubois" target="_blank"></a>&nbsp;<a
+<div><font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;<a
  style="text-decoration: none; color: rgb(0, 0, 0);"
  href="http://scholar.google.fr/citations?user=6Eo7zF0AAAAJ&amp;hl=fr"
  target="_blank">Google Scholar Page</a></font></div>
@@ -165,9 +163,10 @@ Toulouse Cedex 06
 <div>France</div>
 <font style="font-family: Calibri;"><br>
 <br>
-<span style="font-weight: bold;">Current PhD student on the market: </span><a
- style="font-weight: bold;" href="https://gosia-majewska.github.io/"
- target="_blank">Gosia Majewska</a><br>
-<a href="https://voxeu.org/users/pierredubois0" target="_blank"></a></font>
+<span style="font-weight: bold;">Current
+PhD student on the market: </span><a style="font-weight: bold;"
+ href="https://gosia-majewska.github.io/" target="_blank">Gosia
+Majewska</a><br>
+</font>
 </body>
 </html>
