--- a/other.htm
+++ b/other.htm
@@ -300,9 +300,19 @@ Conferences</a></h3>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;- Florida State University, March 1,
+2023<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;- Seminar Lille Economie Management, March 14,
 2023<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;-&nbsp;</span><span
  style="font-size: 11pt; font-family: &quot;Calibri&quot;,sans-serif;">Club
 Statistiques et
