--- a/contact.htm
+++ b/contact.htm
@@ -161,12 +161,10 @@ Esplanade de l'Universit&eacute;
 Toulouse Cedex 06
 </div>
 <div>France</div>
-<font style="font-family: Calibri;"><br>
-<br>
-<span style="font-weight: bold;">Current
-PhD student on the market: </span><a style="font-weight: bold;"
- href="https://gosia-majewska.github.io/" target="_blank">Gosia
-Majewska</a><br>
+<font style="font-family: Calibri;"><span
+ style="text-decoration: underline;"><span style="font-weight: bold;"></span></span><a
+ style="font-weight: bold;" href="https://gosia-majewska.github.io/"
+ target="_blank"></a><br>
 </font>
 </body>
 </html>
