--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -80,7 +80,7 @@ C&eacute;line Bonnet <br>
  target="_blank">Nutrition
 and Risk Sharing within the
 Household</a><span style="font-family: Calibri;">", with Ethan
-Ligon, CEPR 7574<br>
+Ligon, CEPR DP 7574<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 <br>
